--- a/resources/assets/less/typography/base.less
+++ b/resources/assets/less/typography/base.less
@@ -29,7 +29,7 @@
 @text-brand: hsv(@hue-brand-primary, 100%, 86%);
 @text-brand-soft: hsv(@hue-brand-primary, 85%, 86%);
 @text-brand-muted: hsv(@hue-brand-primary, 65%, 86%);
-
+@text-danger: @color-danger;
 
 small {
     font-size: @font-size-sm;
