--- a/resources/assets/less/typography/utilities.less
+++ b/resources/assets/less/typography/utilities.less
@@ -21,6 +21,7 @@
 .text-brand         { color: @text-brand; }
 .text-brand-soft    { color: @text-brand-soft; }
 .text-brand-muted    { color: @text-brand-muted; }
+.text-danger    { color: @text-danger; }
 
 .text-em { font-style: italic; }
 
@@ -42,3 +43,8 @@
 }
 
 .text-break { white-space: pre-line; }
+
+@media (min-width: @screen-md) {
+    .text-md-left { text-align: left; }
+}
+
